--- a/GlucoMan.Maui/MealPage.xaml
+++ b/GlucoMan.Maui/MealPage.xaml
@@ -4,7 +4,7 @@
              x:Class="GlucoMan.Maui.MealPage"
              Title="The meal and its foods">
     <ContentPage.Content>
-        <Grid RowDefinitions="0,20,50,50,50,20,20,50,20,50,65,20,*"
+        <Grid RowDefinitions="0,20,60,60,60,50,20,50,20,60,60,20,*"
               ColumnDefinitions="*,*,*,*,*">
             <Label Grid.Row="0" Grid.Column="0" TextColor="Black" FontAttributes="Bold"
                    Grid.ColumnSpan="5" Text="Meal data" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
@@ -15,37 +15,40 @@
             <Label Grid.Row="1" Grid.Column="3" Text="IdMeal" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="2" Grid.Column="0" x:Name="txtChoOfMealGrams" BackgroundColor="Aqua"
-                   Margin="2,2,2,2" Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
                    TextChanged="txtChoOfMealGrams_TextChanged"/>
             <Entry Grid.Row="2" Grid.Column="1" x:Name="txtAccuracyOfChoMeal" 
-                   Margin="2,2,2,2" Keyboard="Numeric" HorizontalTextAlignment="End" 
+                   Keyboard="Numeric" HorizontalTextAlignment="End" 
+                   VerticalTextAlignment="Center"
                    BackgroundColor="PaleGoldenrod" FontSize="Medium" />
             <Picker Grid.Row="2" Grid.Column="2" x:Name="cmbAccuracyMeal"
-                    Margin="2,2,2,2" HorizontalTextAlignment="End"
+                    VerticalOptions="CenterAndExpand" 
+                    HorizontalOptions="CenterAndExpand"
                     ItemsSource="{Binding Common.QualitativeAccuracy}" 
                     SelectedItem="{Binding NotSet, Mode=TwoWay}"
-                    BackgroundColor="PaleGoldenrod" FontSize="Small"
-                    />
+                    BackgroundColor="PaleGoldenrod" FontSize="Small"/>
             <Entry Grid.Row="2" Grid.Column="3" x:Name="txtIdMeal" BackgroundColor="White" 
-                   FontSize="Medium" HorizontalTextAlignment="Center" IsReadOnly="true"/>
-            <Button Grid.Row="2" Grid.Column="4" Text="C.CHO" x:Name="btnCalc" Margin="2,2,2,2"
-                    Clicked="btnCalc_Click"> </Button>
+                   FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"
+                   IsReadOnly="true"/>
+            <Button Grid.Row="2" Grid.Column="4" Text="Calc. CHO" x:Name="btnCalc" Margin="2,2,2,2"
+                    Clicked="btnCalc_Click" LineBreakMode="WordWrap"> </Button>
 
             <Button Grid.Row="3" Grid.Column="0" Text="Start now" x:Name="btnStartMeal" 
-                    Margin="2,2,2,2" Clicked="btnStartMeal_Click"></Button>
-            <Button Grid.Row="3" Grid.Column="1" Text="Gluc." x:Name="btnGlucose" 
-                    Margin="2,2,2,2" IsEnabled="True" Clicked="btnGlucose_ClickAsync"></Button>
-            <Button Grid.Row="3" Grid.Column="2" Text="C.insul." x:Name="btnInsulinCalc" 
-                    Margin="2,2,2,2" IsEnabled="True" Clicked="btnInsulinCalc_ClickAsync"></Button>
+                    Clicked="btnStartMeal_Click"></Button>
+            <Button Grid.Row="3" Grid.Column="1" Text="Glucos." x:Name="btnGlucose" 
+                    IsEnabled="True" Clicked="btnGlucose_ClickAsync"></Button>
+            <Button Grid.Row="3" Grid.Column="2" Text="Calc. insul." LineBreakMode="WordWrap"
+                    x:Name="btnInsulinCalc" 
+                    IsEnabled="True" Clicked="btnInsulinCalc_ClickAsync"></Button>
             <Button Grid.Row="3" Grid.Column="3" Text="Inject." x:Name="btnInjection" 
-                    Margin="2,2,2,2" IsEnabled="True" Clicked="btnInjection_ClickAsync"></Button>
-            <Button Grid.Row="3" Grid.Column="4" Text="C.Food" x:Name="btnFoodCalc" 
-                    Margin="2,2,2,2" Clicked="btnFoodCalc_ClickAsync"></Button>
+                    IsEnabled="True" Clicked="btnInjection_ClickAsync"></Button>
+            <Button Grid.Row="3" Grid.Column="4" Text="Calc. Food" x:Name="btnFoodCalc" 
+                    Clicked="btnFoodCalc_ClickAsync" LineBreakMode="WordWrap"></Button>
 
             <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" BackgroundColor="White" 
-                   Margin="2,2,2,2" FontSize="Medium" HorizontalTextAlignment="Start" IsReadOnly="false"/>
+                   FontSize="Medium" HorizontalTextAlignment="Start" IsReadOnly="false"/>
             <Button Grid.Row="4" Grid.Column="4" Text="Save" x:Name="btnSaveMeal" 
-                   Margin="2,2,2,2" Clicked="btnSaveAllMeal_Click"></Button>
+                   Clicked="btnSaveAllMeal_Click"></Button>
 
             <Label Grid.Row="5" Grid.Column="0" TextColor="Black" 
                    Grid.ColumnSpan="5" Text="Food data" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
@@ -57,30 +60,30 @@
             <Label Grid.Row="6" Grid.Column="4" Text="Id Food" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="7" Grid.Column="0" x:Name="txtFoodChoPercent" BackgroundColor="GreenYellow"
-                   Margin="2,2,2,2" TextChanged="txtFoodChoPercent_TextChanged"
+                   TextChanged="txtFoodChoPercent_TextChanged"
                    Keyboard="Numeric"
                    FontSize="Medium" HorizontalTextAlignment="End"/>
             <Entry Grid.Row="7" Grid.Column="1" x:Name="txtFoodQuantityGrams" BackgroundColor="GreenYellow"
-                   Margin="2,2,2,2" Keyboard="Numeric" TextChanged="txtFoodQuantityGrams_TextChanged" FontSize="Medium" HorizontalTextAlignment="End"/>
+                   Keyboard="Numeric" TextChanged="txtFoodQuantityGrams_TextChanged" FontSize="Medium" HorizontalTextAlignment="End"/>
             <Entry Grid.Row="7" Grid.Column="2" x:Name="txtFoodChoGrams" BackgroundColor="LightGreen"
-                   Margin="2,2,2,2" Keyboard="Numeric" TextChanged="txtFoodChoGrams_TextChanged" FontSize="Medium" HorizontalTextAlignment="End"/>
-            <Entry Grid.Row="7" Grid.Column="3" x:Name="txtIdFoodInMeal" BackgroundColor="White" 
-                   Margin="2,2,2,2" FontSize="Medium" HorizontalTextAlignment="Center" IsReadOnly="true"/>
-            <Entry Grid.Row="7" Grid.Column="4" x:Name="txtIdFood" BackgroundColor="White" 
-                   Margin="2,2,2,2" Keyboard="Numeric"
-                   FontSize="Medium" HorizontalTextAlignment="Center" IsReadOnly="true"/>
+                   Keyboard="Numeric" TextChanged="txtFoodChoGrams_TextChanged" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Label Grid.Row="7" Grid.Column="3" x:Name="lblIdFoodInMeal" BackgroundColor="White" 
+                   FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+            <Label Grid.Row="7" Grid.Column="4" x:Name="txtIdFood" BackgroundColor="White" 
+                   FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
 
             <Label Grid.Row="8" Grid.Column="0" Text="Name of food" Grid.ColumnSpan="2" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="8" Grid.Column="2" Text="Accuracy" Grid.ColumnSpan="2" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" x:Name="txtFoodInMealName" BackgroundColor="LightGreen"
-                   Margin="2,2,2,2" FontSize="Medium" HorizontalTextAlignment="Start"/>
+                   FontSize="Medium" HorizontalTextAlignment="Start"/>
             <Entry Grid.Row="9" Grid.Column="2" x:Name="txtAccuracyOfChoFoodInMeal" 
-                   Margin="2,2,2,2" Keyboard="Numeric" HorizontalTextAlignment="End" 
+                   Keyboard="Numeric" HorizontalTextAlignment="End" 
                    BackgroundColor="PaleGoldenrod" FontSize="Medium" />
             <Picker Grid.Row="9" Grid.Column="3" x:Name="cmbAccuracyFoodInMeal"
-                    Margin="2,2,2,2" HorizontalTextAlignment="End"
+                    HorizontalTextAlignment="End" VerticalOptions="CenterAndExpand" 
+                    HorizontalOptions="CenterAndExpand"
                     ItemsSource="{Binding Common.QualitativeAccuracy}" 
                     SelectedItem="{Binding NotSet, Mode=TwoWay}"
                     BackgroundColor="PaleGoldenrod" FontSize="Small"/>
@@ -93,9 +96,9 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Button Grid.Row="0" Grid.Column="0" Text="+" x:Name="btnAddFoodInMeal" 
-                        Margin="2,2,2,2" Clicked="btnAddFoodInMeal_Click"></Button>
+                        Clicked="btnAddFoodInMeal_Click"></Button>
                 <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveFoodInMeal"
-                        Margin="2,2,2,2" Clicked="btnRemoveFoodInMeal_Click"></Button>
+                        Clicked="btnRemoveFoodInMeal_Click"></Button>
             </Grid>
 
             <Button Grid.Row="10" Grid.Column="0" Text="Save" x:Name="btnSaveAllFoods" 
