--- a/GlucoMan.Maui/FoodPage.xaml
+++ b/GlucoMan.Maui/FoodPage.xaml
@@ -3,74 +3,105 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.FoodPage"
              Title="Food details">
-    <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
+    <ContentPage.Content ItemsSource="{Binding}">
+        <Grid Padding="8,0,8,0" RowDefinitions="20,20,55,20,55,0,0,30,40,60,20,60,20,60,60"
+              ColumnDefinitions="*,*,*,*" >
 
             <Label Grid.Row="0" Grid.Column="0" TextColor="Black" 
-                Grid.ColumnSpan="4" Text="Food's detailed nutrition data" 
-                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            Grid.ColumnSpan="4" Text="Food's information" 
+                HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
-            <Label Grid.Row="1" Grid.Column="0" Text="Calories [kCal]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="1" Text="Total fats [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="2" Text="Saturated fats" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="3" Text="Mono sat. fats" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="2" Text="Id food" 
+            HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="Name of food" 
+            HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
-            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtCalories" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
-            <Entry Grid.Row="2" Grid.Column="1" x:Name="txtTotalFats" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
-            <Entry Grid.Row="2" Grid.Column="2" x:Name="txtSaturatedFats" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
-            <Entry Grid.Row="2" Grid.Column="3" x:Name="txtMonoinsaturatedFats" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Entry Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" 
+                x:Name="txtName" BackgroundColor="LightGreen" 
+                Keyboard="Text" FontSize="Medium" HorizontalTextAlignment="Center" 
+                IsReadOnly="false" Text= "{Binding Name}"/>
+            <Label Grid.Row="2" Grid.Column="2" x:Name="lblIdFood" BackgroundColor="White" 
+                FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"
+                Text = "{Binding IdFood}"/> 
 
-            <Label Grid.Row="3" Grid.Column="0" Text="Poli fats  [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="3" Grid.Column="1" Text="CHO [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="3" Grid.Column="2" Text="Sugar [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="3" Grid.Column="3" Text="Fibers [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <!--<Button Grid.Row="2" Grid.Column="3" x:Name="btnChoose" Text="Choose" 
+                Clicked="btnChoose_Click"></Button>-->
 
-            <Entry Grid.Row="4" Grid.Column="0" x:Name="txtPolinsaturatedFats" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
-            <Entry Grid.Row="4" Grid.Column="1" x:Name="txtFoodCarbohydrates" BackgroundColor="GreenYellow"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
-            <Entry Grid.Row="4" Grid.Column="2" x:Name="txtSugar" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
-            <Entry Grid.Row="4" Grid.Column="3" x:Name="txtFibers" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Margin="0,0,10,0"
+                Text ="Description of food" HorizontalTextAlignment="Start" VerticalTextAlignment="End"/>
 
-            <Label Grid.Row="5" Grid.Column="0" Text="Proteins [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="5" Grid.Column="1" Text="Salt [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="5" Grid.Column="2" Text="Cholesterol [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="5" Grid.Column="3" Text="Potassium  [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Entry Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" 
+                x:Name="txtDescription" BackgroundColor="White"
+                Keyboard="Text" FontSize="Medium" HorizontalTextAlignment="Start"
+                Text = "{Binding Description}"/>
 
-            <Entry Grid.Row="6" Grid.Column="0" x:Name="txtProteins" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
-            <Entry Grid.Row="6" Grid.Column="1" x:Name="txtSalt" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
-            <Entry Grid.Row="6" Grid.Column="2" x:Name="txtCholesterol" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
-            <Entry Grid.Row="6" Grid.Column="3" x:Name="txtPotassium" BackgroundColor="White"
-                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>
+            <!--<Label Grid.Row="5" Grid.Column="0" Text="CHO [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
-            <Button Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" x:Name="btnChoose" Text="OK" 
-                    HorizontalOptions="Center" Clicked="btnOk_Click"></Button>
+            <Entry Grid.Row="6" Grid.Column="0" x:Name="txtFoodCarbohydrates" BackgroundColor="GreenYellow"
+            Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"/>-->
+                
+            <Label Grid.Row="7" Grid.Column="0" TextColor="Black" 
+            Grid.ColumnSpan="4" Text="Food's detailed nutrition data" 
+                HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
+            <Label Grid.Row="8" Grid.Column="0" Text="Calories [kCal]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="8" Grid.Column="1" Text="Total fats [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="8" Grid.Column="2" Text="Saturated fats [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="8" Grid.Column="3" Text="Mono sat. fats [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+
+            <Entry Grid.Row="9" Grid.Column="0" x:Name="txtCalories" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding Energy.Text}"/>
+            <Entry Grid.Row="9" Grid.Column="1" x:Name="txtTotalFats" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding TotalFats.Text}"/>
+            <Entry Grid.Row="9" Grid.Column="2" x:Name="txtSaturatedFats" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding SaturatedFats.Text}"/>
+            <Entry Grid.Row="9" Grid.Column="3" x:Name="txtMonoinsaturatedFats" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding MonoinsaturatedFats.Text}"/>
+
+            <Label Grid.Row="10" Grid.Column="0" Text="Poli fats  [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="10" Grid.Column="1" Text="CHO [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="10" Grid.Column="2" Text="Sugar [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="10" Grid.Column="3" Text="Fibers [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+
+            <Entry Grid.Row="11" Grid.Column="0" x:Name="txtPolinsaturatedFats" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding PolinsaturatedFats.Text}"/>
+            <Entry Grid.Row="11" Grid.Column="1" x:Name="txtFoodCarbohydrates" BackgroundColor="GreenYellow"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding Cho.Text}"/>
+            <Entry Grid.Row="11" Grid.Column="2" x:Name="txtSugar" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding Sugar.Text}"/>
+            <Entry Grid.Row="11" Grid.Column="3" x:Name="txtFibers" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding Fibers.Text}"/>
+
+            <Label Grid.Row="12" Grid.Column="0" Text="Proteins [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="12" Grid.Column="1" Text="Salt [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="12" Grid.Column="2" Text="Cholesterol [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="12" Grid.Column="3" Text="Potassium  [g]%" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+
+            <Entry Grid.Row="13" Grid.Column="0" x:Name="txtProteins" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding Proteins.Text}"/>
+            <Entry Grid.Row="13" Grid.Column="1" x:Name="txtSalt" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding Salt.Text}"/>
+            <Entry Grid.Row="13" Grid.Column="2" x:Name="txtCholesterol" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding Cholesterol.Text}"/>
+            <Entry Grid.Row="13" Grid.Column="3" x:Name="txtPotassium" BackgroundColor="PaleGoldenrod"
+                Keyboard="Numeric" FontSize="Medium" HorizontalTextAlignment="End"
+                   Text = "{Binding Potassium.Text}"/>
+
+            <Button Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="2" x:Name="btnSave" WidthRequest="150" 
+                    Text="Save" HorizontalOptions="Center" Clicked="btnSave_Click"></Button>
+            <Button Grid.Row="14" Grid.Column="2" Grid.ColumnSpan="2" x:Name="btnAbort" WidthRequest="150" 
+                    Text="Abort" HorizontalOptions="Center" Clicked="btnAbort_Click"></Button>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
