--- a/GlucoMan.Maui/MainPage.xaml
+++ b/GlucoMan.Maui/MainPage.xaml
@@ -2,41 +2,50 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.MainPage">
+    <Page.Resources>
+        <Style TargetType="Button" x:Key="ButtonStyle">
+            <!--<Setter Property="Background" Value="Red"/>
+            <Setter Property="TextColor" Value="Yellow"/>-->
+            <Setter Property="Margin" Value="10,3,10,0"/>
+            <Setter Property="FontSize" Value="17"/>
+        </Style>
+    </Page.Resources>
     <Grid x:Name="grdOuter">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <StackLayout Grid.Column="0">
-            <Frame  x:Name="mainStack" BackgroundColor="#2196F3" Padding="0" CornerRadius="0" Margin="0,0,0,0">
+            <!--<Frame  x:Name="mainStack" BackgroundColor="#2196F3" Padding="0" CornerRadius="0" Margin="0,0,0,0">
                 <Label x:Name="lblAppName" Text="GlucoMan " HorizontalTextAlignment="Center" 
-                       TextColor="White" FontSize="30"/>
-            </Frame>
+                       TextColor="White" FontSize="20"/>
+            </Frame>-->
             <Button x:Name="btnGlucoseMeasurement" Text="Glucose" Clicked="btnGlucoseMeasurement_Clicked"
-                    Margin="15,5,15,5"></Button>
+                    Style="{StaticResource ButtonStyle}"></Button>
             <Button x:Name="btnMeals" Text="Meals" Clicked="btnMeals_Clicked" IsEnabled="True"
-                    Margin="15,4,15,4"></Button>
+                    Style="{StaticResource ButtonStyle}"></Button>
             <Button x:Name="btnNewMeal" Text="New meal" Clicked="btnNewMeal_Clicked" IsEnabled="True"
-                    Margin="15,4,15,4"></Button>
+                    Style="{StaticResource ButtonStyle}"></Button>
             <Button x:Name="btnFoods" Text="Foods" Clicked="btnFoods_Clicked" IsEnabled="True"
-                    Margin="15,4,15,4"></Button>
-            <Button x:Name="btnWeighFood" Text="Weigh Food" Clicked="btnWeighFood_Clicked" IsEnabled="True"
-                    Margin="15,4,15,4"></Button>
+                    Style="{StaticResource ButtonStyle}"></Button>
+            <Button x:Name="btnWeighFood" Text="Weigh Food" Clicked="btnWeighFood_Clicked" IsEnabled="False"
+                    Style="{StaticResource ButtonStyle}"></Button>
             <Button x:Name="btnInsulinCalc" Text="Meal insulin" Clicked="btnInsulinCalc_Clicked"
-                    Margin="15,4,15,4"></Button>
+                    Style="{StaticResource ButtonStyle}"></Button>
             <Button x:Name="btnInjections" Text="Injections" 
-                    Clicked="btnInjections_Clicked" IsEnabled="True" Margin="15,4,15,4"></Button>
+                    Clicked="btnInjections_Clicked" IsEnabled="True" 
+                    Style="{StaticResource ButtonStyle}"></Button>
             <Button x:Name="btnFoodToHitTargetCarbs" Text="Food to reach target carbs" 
                     Clicked="btnFoodToHitTargetCarbs_Clicked"
-                    Margin="15,4,15,4"></Button>
+                    Style="{StaticResource ButtonStyle}"></Button>
             <Button x:Name="btnHypoPrediction" Text="Hypoglicemia time prediction" Clicked="btnHypoPrediction_Clicked"
-                    Margin="15,4,15,4"></Button>
+                    Style="{StaticResource ButtonStyle}"></Button>
             <Button x:Name="btnAlarms" Text="Alarm" IsEnabled="False" Clicked="btnAlarms_Clicked" 
-                    Margin="15,4,15,4"></Button>
+                    Style="{StaticResource ButtonStyle}"></Button>
             <Button x:Name="btnMiscellaneousFunctions" Text="Miscellaneous functions" 
                     Clicked="btnMiscellaneousFunctions_Clicked"
-                    Margin="15,4,15,4"></Button>
+                    Style="{StaticResource ButtonStyle}"></Button>
             <Button x:Name="btnAbout" Text="About" Clicked="btnAbout_Clicked"
-                    Margin="15,4,15,4"></Button>
+                    Style="{StaticResource ButtonStyle}"></Button>
         </StackLayout>
     </Grid>
 </ContentPage>
