--- a/GlucoMan.Maui/MealsPage.xaml
+++ b/GlucoMan.Maui/MealsPage.xaml
@@ -4,7 +4,7 @@
              x:Class="GlucoMan.Maui.MealsPage"
              Title="Meals">
     <ContentPage.Content>
-        <Grid RowDefinitions="40,20,50,20,50,50,50,20,20,*"
+        <Grid RowDefinitions="40,20,50,20,60,50,50,20,20,*"
             ColumnDefinitions="*,*,*,*">
             <RadioButton Grid.Row="0" Grid.Column="0" Content="b.fast" x:Name="rdbIsBreakfast" 
                          CheckedChanged="rdb_CheckedChanged"/>
@@ -28,7 +28,8 @@
                    Keyboard="Numeric" BackgroundColor="PaleGoldenrod" HorizontalTextAlignment="End"
                    FontSize="Medium" />
             <Picker Grid.Row="2" Grid.Column="2" x:Name="cmbAccuracyMeal" Margin="2,2,2,2" 
-                    HorizontalTextAlignment="End"
+                    VerticalOptions="CenterAndExpand" 
+                    HorizontalOptions="CenterAndExpand"
                     ItemsSource="{Binding Common.QualitativeAccuracy}" 
                     SelectedItem="{Binding NotSet, Mode=TwoWay}"
                     BackgroundColor="PaleGoldenrod" FontSize="Small"/>
@@ -48,8 +49,8 @@
             <TimePicker Grid.Row="4" Grid.Column="2" x:Name="dtpMealTimeBegin" Margin="0,2,0,2" 
                         BackgroundColor="PaleGreen" Format="HH:mm:ss" 
                         HorizontalOptions="Center" />
-            <Button Grid.Row="4" Grid.Column="3" Text="Clean" Margin="2,2,2,2" 
-                    x:Name="btnDefaults" Clicked="btnDefault_Click"></Button>
+            <Button Grid.Row="4" Grid.Column="3" Text="Clean fields" Margin="2,2,2,2" 
+                    x:Name="btnDefaults" Clicked="btnDefault_Click" LineBreakMode="WordWrap"/>
 
             <Entry Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" Margin="2,2,2,2"
                    BackgroundColor="White" 
