--- a/GlucoMan.Maui/MiscellaneousFunctionsPage.xaml
+++ b/GlucoMan.Maui/MiscellaneousFunctionsPage.xaml
@@ -14,6 +14,7 @@
                 <RowDefinition Height="80"/>
                 <RowDefinition Height="80"/>
                 <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
@@ -21,40 +22,37 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Blood glucose unit conversion"
                    FontSize="Title" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-
             <Label Grid.Row="1" Grid.Column="0" Text="mg/dL" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="1" Grid.Column="1" Text="mmol/L" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-
             <Entry Grid.Row="2" Grid.Column="0" x:Name="txt_mgPerdL" HorizontalTextAlignment ="End" Text="" 
                    Keyboard="Numeric" Placeholder="mg/dl" BackgroundColor="GreenYellow" TextChanged="txt_mgPerdL_TextChanged"/>
             <Entry Grid.Row="2" Grid.Column="1" x:Name="txt_mmolPerL" HorizontalTextAlignment ="End" Text="" 
                    Keyboard="Numeric" Placeholder="mmol/L" BackgroundColor="GreenYellow" TextChanged="txt_mmolPerL_TextChanged"/>
-
             <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" 
+                    Text="Settings" Margin="100,0,100,0"
+                    BackgroundColor="Grey" TextColor="White"
+                    x:Name="btnSettings" Clicked="btnSettings_Click" />
+            <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" 
                     Text="Reset database" Margin="100,0,100,0"
                     BackgroundColor="Red" TextColor="Yellow"
                     x:Name="btnResetDatabase" Clicked="btnResetDatabase_Click" />
-
-            <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" 
+            <Button Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" 
                     Text="Copy files" Margin="100,0,100,0"
                     x:Name="btnCopyDatabase" Clicked="btnCopyProgramsFiles_Click" />
-
-            <Button Grid.Row="5" Grid.Column="0"
+            <Button Grid.Row="6" Grid.Column="0"
                     Text="Import data"
                     x:Name="btnImport" Clicked="btnImport_Click" />
-            <Button Grid.Row="5" Grid.Column="1" 
+            <Button Grid.Row="6" Grid.Column="1" 
                     Text="Read database" 
                     BackgroundColor="Red" TextColor="Yellow"
                     x:Name="btnReadDatabase" Clicked="btnReadDatabase_Click" />
-
-            <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" 
+            <Button Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" 
                     Text="Stop application" Margin="100,0,100,0"
                     x:Name="btnStopApplication" Clicked="btnStopApplication_Click" />
-
-            <Button Grid.Row="7" Grid.Column="0"
+            <Button Grid.Row="8" Grid.Column="0"
                     Text="Show error log" 
                     x:Name="btnShowErrorLog" Clicked="btnShowErrorLog_ClickAsync" />
-            <Button Grid.Row="7" Grid.Column="1"
+            <Button Grid.Row="8" Grid.Column="1"
                     Text="Delete error log" 
                     x:Name="btnDeleteErrorLog" Clicked="btnDeleteErrorLog_ClickAsync" />
         </Grid>
