--- a/GlucoMan.Maui/Resources/Styles/Colors.xaml
+++ b/GlucoMan.Maui/Resources/Styles/Colors.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="Primary">#bbbbbb</Color>
+    <Color x:Key="Primary">LightBlue</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
     <Color x:Key="Tertiary">#4b9b98</Color>
     <Color x:Key="White">White</Color>
